# arkimede

./: .gitignore  README.md  pyproject.toml  setup.py
arkimede/: __init__.py  databases.py  reports.py  transtates.py  utilities.py  utils.py
arkimede/catkit/: build.py  enumeration.py  gratoms.py  molecules.py  reaction_mechanism.py  surface.py  symmetry.py
arkimede/ocp/: __init__.py  ocp_calc.py  ocp_utils.py
arkimede/optimize/: climbbonds.py  climbfixinternals.py  climbtsbonds.py  constraints.py  eigenfollow.py  observers.py  scantsbonds.py  tsoptimizer.py
arkimede/utilities/: __init__.py  actlearn.py  atoms.py  databases.py  nebs.py  transtates.py
arkimede/workflow/: active_learning.py  calculations.py  checks.py  climbbonds.py  climbfixinternals.py  dft_calculations.py  inversion_symmetry.py  neb.py  observers.py  reaction_mechanism.py  reaction_workflow.py  recipes.py  sella.py  transition_states.py  utilities.py  vibrations.py
examples/: analyze_database.py  analyze_steps.py  analyze_vasp_forces.py  ase_structures.py  build_initial_mechanism.py  calculate_mechanism.py  check_forces_vasp.py  database_test.db  example_ts_search.py  finetune_ocpmodel.py  microkinetic_modeling.py  modify_database.py  plot_dft_and_active_learning_results.py  plot_mlp_ts_searches_results.py  run_calculations_gas.py  run_calculations_gas_molecules.py  run_calculations_ocp_mechanism.py  run_calculations_vasp_actlearn_optimization.py  run_calculations_vasp_optimizations.py  run_calculations_vasp_singlepoints.py  run_finetuning_ocp_model.py  run_microkinetic_modeling.py  run_vibrations_gas.py  run_workflow.py  submit_job.sh  template.yaml  test_workflow.py  vasp_single_points.py  vibrations.py
examples/00_databases/: SAA_DFT_reactions.db
examples/01_TS_searches_with_MLP/: 01_run_one_ts_search_with_mlp.py  01_run_ts_searches_with_mlp.py  03_plot_success_all_mlps.py  (+1 more)
scripts/: aloptvasp.py  asevasp.py  asevasp_actlearn.py  asevasp_backup.py
templates/: template_k8s.yaml  template_vasp_k8s.yaml
(+52 files in other folders)
