[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arkimede"
version = "1.0.0"
description = "Automatic Reactions KInetic MEchanism DEsign."
readme = "README.md"
requires-python = ">=3.8, <4"
license = { text = "GPL-3.0" }
authors = [
  { name = "Raffaele Cheula", email = "cheula.raffaele@gmail.com" }
]
urls = { "Source" = "https://github.com/raffaelecheula/arkimede.git" }
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ase",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["arkimede*"]
exclude = ["examples*"]